--- a/Julmar.Wpf.Helpers/test/DragDropTest/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/DragDropTest/MainWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window x:Class="ItemsControlDragDropBehavior.TestApp.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Interaction="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:julmar="http://www.julmar.com/wpfhelpers" 
-    Title="Drag Drop Test">
+    xmlns:Interaction="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:julmar="http://www.julmar.com/wpfhelpers"
+    xmlns:TestApp="clr-namespace:ItemsControlDragDropBehavior.TestApp" Title="Drag Drop Test">
     <Window.Resources>
-        <DataTemplate x:Key="listBoxDataTemplate" DataType="Product">
+        <DataTemplate x:Key="listBoxDataTemplate" DataType="TestApp:Product">
             <Border BorderBrush="Blue" CornerRadius="5"  BorderThickness="1" Padding="10" Margin="5" Background="White" TextElement.Foreground="Green">
                 <StackPanel Orientation="Vertical">
                     <TextBlock Text="{Binding Path=Name}" FontWeight="Bold" />
@@ -14,16 +14,24 @@
             </Border>
         </DataTemplate>
 
-        <DataTemplate x:Key="listViewItemTemplate" DataType="Product">
+        <DataTemplate x:Key="listViewItemTemplate" DataType="TestApp:Product">
             <StackPanel Orientation="Horizontal" Margin="10" Background="DarkBlue" TextElement.Foreground="White">
                 <TextBlock Text="{Binding Path=Name}" Margin="0,0,5,0" />
                 <TextBlock Text="{Binding Path=Quantity, StringFormat=Quantity: \{0\}}" />
             </StackPanel>
         </DataTemplate>
+
+        <DataTemplate x:Key="DataGridDragTemplate" DataType="TestApp:Product">
+            <Border BorderBrush="Black" BorderThickness="2" Background="White" Padding="20,5">
+                <TextBlock FontWeight="Bold" Text="{Binding Name}" />
+            </Border>
+        </DataTemplate>
+
     </Window.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition />
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
@@ -32,10 +40,11 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <ListBox Margin="10" ItemTemplate="{StaticResource listBoxDataTemplate}" ItemsSource="{Binding Products}" SelectionMode="Multiple" >
+        <ListBox Margin="10" ItemTemplate="{StaticResource listBoxDataTemplate}" 
+                 ItemsSource="{Binding Products}" SelectionMode="Multiple" >
             <Interaction:Interaction.Behaviors>
-                <julmar:ItemsControlDragDropBehavior DragInitiated="OnDragInitiated" AllowSelf="False" DropInitiated="OnMultiSelectDropInitiated" DropEnter="OnDropEnter"
-                                                        DragTemplate="{StaticResource listBoxDataTemplate}" />
+                <julmar:ItemsControlDragDropBehavior 
+                    AllowSelf="False"  DragTemplate="{StaticResource listBoxDataTemplate}" />
             </Interaction:Interaction.Behaviors>
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
@@ -51,11 +60,24 @@
             </Interaction:Interaction.Behaviors>
         </ListBox>
 
-        <ListView Margin="10" Grid.Row="1" Grid.ColumnSpan="2">
+        <Label Grid.Column="2" Content="DG can only drag within itself" />
+        <DataGrid Grid.Column="2" Margin="10,30,10,10" ItemsSource="{Binding Products}" AutoGenerateColumns="True" CanUserAddRows="False" 
+                  IsReadOnly="True" CanUserDeleteRows="False" CanUserResizeRows="False" CanUserSortColumns="True">
+            <Interaction:Interaction.Behaviors>
+                <julmar:ItemsControlDragDropBehavior 
+                        DragTemplate="{StaticResource DataGridDragTemplate}"
+                        AllowOnlySelf="True"/>
+            </Interaction:Interaction.Behaviors>
+        </DataGrid>
+
+        <Label Grid.Row="1" Grid.ColumnSpan="3" Margin="10,0"
+               Content="Drop items into the below ListView - should only allow when Ctrl is held during drag." />
+        
+        <ListView Margin="10,30,10,10" Grid.Row="1" Grid.ColumnSpan="3">
             <Interaction:Interaction.Behaviors>
                 <julmar:ItemsControlDragDropBehavior DragTemplate="{StaticResource listViewItemTemplate}"
-                                                        DropEnter="OnDropEnter" DropInitiated="OnDropInitiated" />
-                <julmar:ListViewSortBehavior InitialColumnIndex="2" SortDirection="Descending" ArrowFill="SkyBlue" />
+                                                     DropEnter="OnListViewDropEnter" />
+                <julmar:ListViewSortBehavior InitialColumnIndex="2" SortDirection="Descending" ArrowFill="Black" />
             </Interaction:Interaction.Behaviors>
             <ListView.View>
                 <GridView>
