--- a/Metro/Test/ViewModelInjection/MainPage.xaml
+++ b/Metro/Test/ViewModelInjection/MainPage.xaml
@@ -3,21 +3,24 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Mvvm="using:JulMar.Windows.Mvvm"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-<Page.Resources>
-    <Mvvm:ViewModelLocatorResource x:Key="VMLocator" />
-</Page.Resources>
-    
-<Grid  Background="{StaticResource ApplicationPageBackgroundThemeBrush}" 
-        DataContext="{Binding ViewModels[theVM], Source={StaticResource VMLocator}}">
+    <Grid  Background="{StaticResource ApplicationPageBackgroundThemeBrush}" 
+            DataContext="{Binding ViewModels[theVM], Source={StaticResource VMLocator}}">
 
-        <StackPanel>
+        <TextBlock Text="{Binding HelloMessage}" FontSize="30" HorizontalAlignment="Center"
+                   VerticalAlignment="Center" />
+        
+        <StackPanel Orientation="Horizontal" 
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom">
+            
             <Button HorizontalAlignment="Center" VerticalAlignment="Center"
                 Padding="20,10" Content="Show Message" Command="{Binding ShowMessage}" />
             <CheckBox Content="Can Run Message Now" IsChecked="{Binding CanShowCommand, Mode=TwoWay}"
                   HorizontalAlignment="Center" Margin="20"/>
+            
         </StackPanel>
 
         <StackPanel Visibility="Collapsed" x:Name="MessageBox" Background="Black">
