--- a/Julmar.Wpf.Helpers/test/DragDropTest/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/DragDropTest/MainWindow.xaml
@@ -70,10 +70,10 @@
             </Interaction:Interaction.Behaviors>
         </DataGrid>
 
-        <Label Grid.Row="1" Grid.ColumnSpan="3" Margin="10,0"
+        <Label Grid.Row="1" Grid.ColumnSpan="2" Margin="10,0"
                Content="Drop items into the below ListView - should only allow when Ctrl is held during drag." />
         
-        <ListView Margin="10,30,10,10" Grid.Row="1" Grid.ColumnSpan="3">
+        <ListView Margin="10,30,10,10" Grid.Row="1" Grid.ColumnSpan="2">
             <Interaction:Interaction.Behaviors>
                 <julmar:ItemsControlDragDropBehavior DragTemplate="{StaticResource listViewItemTemplate}"
                                                      DropEnter="OnListViewDropEnter" />
@@ -89,6 +89,13 @@
                 </GridView>
             </ListView.View>
         </ListView>
+
+        <DataGrid Grid.Row="1" Grid.Column="2" Margin="10,30,10,10" ItemsSource="{Binding Products}" AutoGenerateColumns="True" CanUserAddRows="False" 
+                  IsReadOnly="True" CanUserDeleteRows="False" CanUserResizeRows="False" CanUserSortColumns="True">
+            <Interaction:Interaction.Behaviors>
+                <julmar:DataGridDragRowBehavior />
+            </Interaction:Interaction.Behaviors>
+        </DataGrid>
 
     </Grid>
 </Window>
