--- a/Metro/Test/SimpleMVVMTest/MainPage.xaml
+++ b/Metro/Test/SimpleMVVMTest/MainPage.xaml
@@ -1,21 +1,26 @@
-﻿<Page
-    x:Class="SimpleMVVMTest.MainPage"
-    IsTabStop="false"
+﻿<Page x:Class="SimpleMVVMTest.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Converters="using:JulMar.Windows.Converters" xmlns:Interactivity="using:System.Windows.Interactivity"
-    xmlns:Interactivity1="using:JulMar.Windows.Interactivity"
-    xmlns:Actions="using:JulMar.Windows.Interactivity.Actions" xmlns:Input="using:JulMar.Windows.Interactivity.Input"
-    xmlns:UI="using:JulMar.Windows.UI" mc:Ignorable="d">
-
-    <UI:InputBinder.Mappings>
-        <UI:InputBinding Command="{Binding ShowText}" Key="Control+S" />
-    </UI:InputBinder.Mappings>
+    xmlns:jvm="using:JulMar.Windows.Mvvm"
+    xmlns:jc="using:JulMar.Windows.Converters" 
+    xmlns:i="using:System.Windows.Interactivity"
+    xmlns:ji="using:JulMar.Windows.Interactivity"
+    xmlns:jb="using:JulMar.Windows.Behaviors"
+    xmlns:ja="using:JulMar.Windows.Interactivity.Actions" 
+    xmlns:in="using:JulMar.Windows.Interactivity.Input"
+    xmlns:ui="using:JulMar.Windows.UI" 
+    xmlns:viewModels="using:SimpleMvvmTest.ViewModels" mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=viewModels:MainViewModel, IsDesignTimeCreatable=True}"
+    jvm:ViewModelLocator.Key="MainVM">
+    
+    <ui:InputBinder.Mappings>
+        <ui:InputBinding Command="{Binding ShowText}" Key="Control+S" />
+    </ui:InputBinder.Mappings>
     
     <Page.Resources>
-        <Converters:ToStringConverter x:Key="toString" />
+        <jc:ToStringConverter x:Key="toString" />
     </Page.Resources>
 
     <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
@@ -28,90 +33,99 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Interactivity:Interaction.Triggers>
-            <Interactivity1:ViewModelTrigger Target="{Binding}" EventName="ChangeColor">
-                <Interactivity1:ChangePropertyAction PropertyName="Background" Value="Red" />
-            </Interactivity1:ViewModelTrigger>
-        </Interactivity:Interaction.Triggers>
+        <i:Interaction.Triggers>
+            <ji:ViewModelTrigger Target="{Binding}" EventName="ChangeColor">
+                <ji:ChangePropertyAction PropertyName="Background" Value="DarkGreen" />
+            </ji:ViewModelTrigger>
+        </i:Interaction.Triggers>
 
         <TextBox Text="{Binding TextToDisplay, Mode=TwoWay}" HorizontalAlignment="Center" VerticalAlignment="Bottom"
-                 Margin="20" Width="200"
-                 UI:AccessKey.Accelerator="Alt+T" />
+                 Margin="20" Width="200" 
+                 ui:AccessKey.Accelerator="Alt+T" />
         
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1" Orientation="Horizontal">
-            <Button Content="Show Text" 
-                ToolTipService.ToolTip="Shortcut (CTRL+S)"
+            <Button Content="Show Message Prompt" 
+                ToolTipService.ToolTip="Global Shortcut (CTRL+S)"
                 Margin="20" Padding="10,5"
-                Command="{Binding ShowText}" />
-
-            <Button Content="Adjust Rectangle" Margin="20" Padding="10,5" Click="OnAdjustRect" />
+                Command="{Binding ShowPrompt}" />
 
             <Button Content="Call JustShowText" Margin="20" Padding="10,5">
-                <Interactivity:Interaction.Triggers>
-                    <Interactivity:EventTrigger EventName="Click">
-                        <Actions:CallMethodAction TargetObject="{Binding}"  MethodName="JustShowText" />
-                    </Interactivity:EventTrigger>
-                </Interactivity:Interaction.Triggers>
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <ja:CallMethodAction TargetObject="{Binding}"  MethodName="JustShowText" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
             </Button>
 
-            <Button Content="Change Bkgnd via VM Trigger"
-                    Command="{Binding RunAction}" />
+            <Button Content="Change Bkgnd via VM Trigger" Command="{Binding RunAction}" 
+                    jb:FocusManager.InitialFocus="true" />
         </StackPanel>
         
         <CheckBox Content="Show Advanced Message" HorizontalAlignment="Right" VerticalAlignment="Center"
-                  Grid.Row="1"
-                  Margin="20" IsChecked="{Binding ShowAdvanced, Mode=TwoWay}" />
+                  Grid.Row="1" Margin="20" IsChecked="{Binding ShowAdvanced, Mode=TwoWay}" />
 
+        <TextBlock Text="Move mouse over to animate color" HorizontalAlignment="Center"
+                   VerticalAlignment="Center" Margin="0,-250,0,0" TextWrapping="Wrap" TextAlignment="Center" />
         <Rectangle Fill="{Binding Color}" Margin="50" Stroke="White" StrokeThickness="1" Width="200" Height="200">
-            <Interactivity:Interaction.Triggers>
-                <Interactivity:EventTrigger EventName="PointerEntered">
-                    <Interactivity1:InvokeCommand Command="{Binding MouseEnter}" />
-                </Interactivity:EventTrigger>
-                <Interactivity:EventTrigger EventName="PointerExited">
-                    <Interactivity1:InvokeCommand Command="{Binding MouseLeave}" />
-                </Interactivity:EventTrigger>
-            </Interactivity:Interaction.Triggers>
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="PointerEntered">
+                    <ji:InvokeCommand Command="{Binding MouseEnter}" />
+                </i:EventTrigger>
+                <i:EventTrigger EventName="PointerExited">
+                    <ji:InvokeCommand Command="{Binding MouseLeave}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
         </Rectangle>
 
+        <TextBlock Text="Double-click to animate to blue" HorizontalAlignment="Left"
+                   VerticalAlignment="Top" Margin="50,20" TextWrapping="Wrap" TextAlignment="Center" />
         <Rectangle Margin="50" Stroke="White" StrokeThickness="1" Width="200" Height="200" HorizontalAlignment="Left" VerticalAlignment="Top" Fill="{StaticResource rcBrush}">
-            <Interactivity:Interaction.Triggers>
-                <Interactivity1:DoubleClickTrigger>
-                    <Interactivity1:ChangePropertyAction TargetObject="{StaticResource rcBrush}" PropertyName="Color" Duration="0:0:3">
-                        <Interactivity1:ChangePropertyAction.Value>
+            <i:Interaction.Triggers>
+                <ji:DoubleClickTrigger>
+                    <ji:ChangePropertyAction TargetObject="{StaticResource rcBrush}" PropertyName="Color" Duration="0:0:3">
+                        <ji:ChangePropertyAction.Value>
                             <Color>Blue</Color>
-                        </Interactivity1:ChangePropertyAction.Value>
-                    </Interactivity1:ChangePropertyAction>
-                </Interactivity1:DoubleClickTrigger>
-            </Interactivity:Interaction.Triggers>
+                        </ji:ChangePropertyAction.Value>
+                    </ji:ChangePropertyAction>
+                </ji:DoubleClickTrigger>
+            </i:Interaction.Triggers>
         </Rectangle>
 
-        <Rectangle x:Name="RedRect" Fill="Red" Margin="50" Stroke="White" StrokeThickness="1" Width="200" Height="200" HorizontalAlignment="Left" VerticalAlignment="Bottom">
-            <Interactivity:Interaction.Behaviors>
-                <Interactivity1:DragPositionBehavior />
-            </Interactivity:Interaction.Behaviors>
-            <Interactivity:Interaction.Triggers>
-                <Input:KeyTrigger Key="B" Modifiers="Control">
-                    <Interactivity1:ChangePropertyAction PropertyName="Stroke" Value="Gold" TargetName="RedRect" />
-                    <Interactivity1:ChangePropertyAction PropertyName="StrokeThickness" Value="3" TargetName="RedRect" />
-                </Input:KeyTrigger>
-            </Interactivity:Interaction.Triggers>
-        </Rectangle>
-
-        <Rectangle x:Name="GreenRect" Fill="Green" Margin="50" Stroke="White" StrokeThickness="1" Width="200" Height="200" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-            <Interactivity:Interaction.Triggers>
-                <Interactivity1:DataTrigger Binding="{Binding ShowAdvanced}" Comparison="Equal" Value="True">
-                    <Interactivity1:ChangePropertyAction PropertyName="Fill">
-                        <Interactivity1:ChangePropertyAction.Value>
+        <TextBlock Text="CTRL+A and CTRL+B to change the border, can also click and drag" 
+                   TextWrapping="Wrap" Width="200" TextAlignment="Center"
+                   HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="50,10" />
+        <Rectangle Fill="Red" Margin="50" Stroke="White" StrokeThickness="1" Width="200" Height="200" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+            <i:Interaction.Behaviors>
+                <ji:DragPositionBehavior />
+            </i:Interaction.Behaviors>
+            <i:Interaction.Triggers>
+                <in:KeyTrigger Key="A" Modifiers="Control">
+                    <ji:ChangePropertyAction PropertyName="Stroke" Value="White" />
+                    <ji:ChangePropertyAction PropertyName="StrokeThickness" Value="1" />
+                </in:KeyTrigger>
+                <in:KeyTrigger Key="B" Modifiers="Control">
+                    <ji:ChangePropertyAction PropertyName="Stroke" Value="Lime" />
+                    <ji:ChangePropertyAction PropertyName="StrokeThickness" Value="10" />
+                </in:KeyTrigger>
+                <ji:DataTrigger Binding="{Binding ShowAdvanced}" Comparison="Equal" Value="True">
+                    <ji:ChangePropertyAction PropertyName="Fill">
+                        <ji:ChangePropertyAction.Value>
                             <SolidColorBrush Color="Orange" />
-                        </Interactivity1:ChangePropertyAction.Value>
-                    </Interactivity1:ChangePropertyAction>
-                </Interactivity1:DataTrigger>
-            </Interactivity:Interaction.Triggers>
+                        </ji:ChangePropertyAction.Value>
+                    </ji:ChangePropertyAction>
+                </ji:DataTrigger>
+                <ji:DataTrigger Binding="{Binding ShowAdvanced}" Comparison="Equal" Value="False">
+                    <ji:ChangePropertyAction PropertyName="Fill">
+                        <ji:ChangePropertyAction.Value>
+                            <SolidColorBrush Color="Red" />
+                        </ji:ChangePropertyAction.Value>
+                    </ji:ChangePropertyAction>
+                </ji:DataTrigger>
+            </i:Interaction.Triggers>
         </Rectangle>
 
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="48"
-                   Foreground="Yellow" FontFamily="Forte" 
-                   Text="{Binding Text, Converter={StaticResource toString}, ConverterParameter='The Button Returned: {0}'}" />
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="32"
+                   Foreground="White" Text="{Binding Text, Converter={StaticResource toString}, ConverterParameter='Got: {0}'}" />
         
     </Grid>
 </Page>
