- Merged in NotificationExtras from SDK sample - Added support for KnownTypes to AutoSerializingPageNavigator and XML/JSon

--- a/Metro/Test/SimpleMVVMTest/MainPage.xaml
+++ b/Metro/Test/SimpleMVVMTest/MainPage.xaml
@@ -66,6 +66,8 @@
 
             <Button Content="Change Bkgnd via VM Trigger" Command="{Binding RunAction}" 
                     jb:FocusManager.InitialFocus="true" />
+            
+            <Button Content="Show Toast" Click="OnShowToast" />
         </StackPanel>
         
         <CheckBox Content="Show Advanced Message" HorizontalAlignment="Right" VerticalAlignment="Center"
