--- a/Metro/Test/InteractionTriggers/MainPage.xaml
+++ b/Metro/Test/InteractionTriggers/MainPage.xaml
@@ -1,14 +1,18 @@
-﻿<Page
-    x:Class="TestApp.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestApp"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:si="using:System.Windows.Interactivity" xmlns:i="using:JulMar.Windows.Interactivity"
-    xmlns:Mvvm="using:JulMar.Windows.Mvvm" xmlns:ViewModels="using:TestApp.ViewModels" mc:Ignorable="d"
-    Mvvm:ViewModelLocator.Key="MainVm"
-    d:DataContext="{d:DesignInstance Type=ViewModels:MainViewModel, IsDesignTimeCreatable=True}">
+﻿<Page x:Class="TestApp.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:Mvvm="using:JulMar.Windows.Mvvm"
+      xmlns:ViewModels="using:TestApp.ViewModels"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:i="using:JulMar.Windows.Interactivity"
+      xmlns:interactivity="using:JulMar.Windows.Interactivity.Interactivity"
+      xmlns:local="using:TestApp"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:si="using:System.Windows.Interactivity"
+      Mvvm:ViewModelLocator.Key="MainVm"
+      d:DataContext="{d:DesignInstance Type=ViewModels:MainViewModel,
+                                       IsDesignTimeCreatable=True}"
+      mc:Ignorable="d">
 
     <Page.Resources>
         <DataTemplate x:Key="SearchCostCenterTemplate">
@@ -18,7 +22,7 @@
             </StackPanel>
         </DataTemplate>
     </Page.Resources>
-    
+
     <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
 
         <Grid.RowDefinitions>
@@ -26,40 +30,114 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center">
-            <ToggleButton IsChecked="{Binding SearchCostCenterPopUpIsOpen, Mode=TwoWay}" Margin="20"
-                      Content="Show Popup" 
-                      FontSize="40" />
-            <Button Command="{Binding GotoPage2}" Content="Goto Page 2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" Width="150" Height="50"/>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top">
+            <ToggleButton Margin="20"
+                          Content="Show Popup"
+                          FontSize="40"
+                          IsChecked="{Binding SearchCostCenterPopUpIsOpen,
+                                              Mode=TwoWay}" />
+            <Button Width="150"
+                    Height="50"
+                    Margin="0"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Command="{Binding GotoPage2}"
+                    Content="Goto Page 2" />
         </StackPanel>
-        
-        <TextBlock Text="{Binding Counter}" FontSize="40"
-                   HorizontalAlignment="Right" VerticalAlignment="Center" Margin="20" />
-        
-        <Popup x:Name="SearchCostCenterPopUp" IsOpen="{Binding SearchCostCenterPopUpIsOpen, Mode=TwoWay}" Grid.Row="1">
-            <Grid Height="530" Width="400" Margin="460,29,0,0" Background="DarkBlue">
-                <StackPanel HorizontalAlignment="Left" Height="530" VerticalAlignment="Top" Width="400" Margin="10,10,0,0">
+
+        <TextBlock Margin="20"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="40"
+                   Text="{Binding Counter}" />
+
+        <Popup x:Name="SearchCostCenterPopUp"
+               Grid.Row="1"
+               IsOpen="{Binding SearchCostCenterPopUpIsOpen,
+                                Mode=TwoWay}">
+            <Grid Width="400"
+                  Height="530"
+                  Margin="460,29,0,0"
+                  Background="DarkBlue">
+                <StackPanel Width="400"
+                            Height="530"
+                            Margin="10,10,0,0"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Top">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock TextWrapping="Wrap" Text="Search Cost Center" FontSize="20" FontFamily="Global User Interface" Margin="0"/>
+                        <TextBlock Margin="0"
+                                   FontFamily="Global User Interface"
+                                   FontSize="20"
+                                   Text="Search Cost Center"
+                                   TextWrapping="Wrap" />
                     </StackPanel>
 
-                    <StackPanel  Orientation="Horizontal">
-                        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Search by" Width="100" VerticalAlignment="Top" FontSize="20" Margin="0,10,20,0"/>
-                        <ComboBox ItemsSource="{Binding ListSearchByForCostCenter, Mode=TwoWay}"  SelectedItem="{Binding SelectedSearchByForCostCenter, Mode=TwoWay}" Margin="0,0,0,27" Width="250"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Width="100"
+                                   Margin="0,10,20,0"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Top"
+                                   FontSize="20"
+                                   Text="Search by"
+                                   TextWrapping="Wrap" />
+                        <ComboBox Width="250"
+                                  Margin="0,0,0,27"
+                                  ItemsSource="{Binding ListSearchByForCostCenter,
+                                                        Mode=TwoWay}"
+                                  SelectedItem="{Binding SelectedSearchByForCostCenter,
+                                                         Mode=TwoWay}" />
                     </StackPanel>
-                    <StackPanel  Margin="0,0,10,0" Orientation="Horizontal">
-                        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Keyword" Width="100" VerticalAlignment="Top" FontSize="20" Margin="0,10,20,0"/>
-                        <TextBox Text="{Binding SearchKeywordForCostCenter, Mode=TwoWay}" HorizontalAlignment="Left" TextWrapping="Wrap" Margin="0,0,0,0" Width="250"/>
+                    <StackPanel Margin="0,0,10,0" Orientation="Horizontal">
+                        <TextBlock Width="100"
+                                   Margin="0,10,20,0"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Top"
+                                   FontSize="20"
+                                   Text="Keyword"
+                                   TextWrapping="Wrap" />
+                        <TextBox Width="250"
+                                 Margin="0,0,0,0"
+                                 HorizontalAlignment="Left"
+                                 Text="{Binding SearchKeywordForCostCenter,
+                                                Mode=TwoWay}"
+                                 TextWrapping="Wrap">
+                            <si:Interaction.Behaviors>
+                                <interactivity:WatermarkTextBehavior Foreground="Red" Text="Keyword..." />
+                            </si:Interaction.Behaviors>
+                        </TextBox>
                     </StackPanel>
-                    <StackPanel Height="80" Margin="0,0,10,0" Orientation="Horizontal" HorizontalAlignment="Center" Width="300">
-                        <Button Command="{Binding SearchCommand}" CommandParameter="CostCenter" Content="Search" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" Width="150" Height="50"/>
-                        <Button Command="{Binding CancelCommand}" CommandParameter="CostCenter"  Content="Cancel" Height="50" Width="150" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
+                    <StackPanel Width="300"
+                                Height="80"
+                                Margin="0,0,10,0"
+                                HorizontalAlignment="Center"
+                                Orientation="Horizontal">
+                        <Button Width="150"
+                                Height="50"
+                                Margin="0"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                Command="{Binding SearchCommand}"
+                                CommandParameter="CostCenter"
+                                Content="Search" />
+                        <Button Width="150"
+                                Height="50"
+                                Margin="0,0,5,0"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Stretch"
+                                Command="{Binding CancelCommand}"
+                                CommandParameter="CostCenter"
+                                Content="Cancel" />
                     </StackPanel>
-                    <ListView Height="300" Width="350" ItemsSource="{Binding ListSearchCostCenter, Mode=TwoWay}" SelectedItem="{Binding SelectedSearchCostCenter, Mode=TwoWay}" 
-                              ItemTemplate="{StaticResource SearchCostCenterTemplate}">
+                    <ListView Width="350"
+                              Height="300"
+                              ItemTemplate="{StaticResource SearchCostCenterTemplate}"
+                              ItemsSource="{Binding ListSearchCostCenter,
+                                                    Mode=TwoWay}"
+                              SelectedItem="{Binding SelectedSearchCostCenter,
+                                                     Mode=TwoWay}">
                         <si:Interaction.Triggers>
                             <si:EventTrigger EventName="SelectionChanged">
-                                <i:InvokeCommand CommandParameter="CostCenter" Command="{Binding SelectionChangedCommand}"/>
+                                <i:InvokeCommand Command="{Binding SelectionChangedCommand}" CommandParameter="CostCenter" />
                             </si:EventTrigger>
                         </si:Interaction.Triggers>
                     </ListView>
