Added support to attach watermark text through attached property

--- a/Metro/Test/InteractionTriggers/MainPage.xaml
+++ b/Metro/Test/InteractionTriggers/MainPage.xaml
@@ -100,10 +100,13 @@
                                  HorizontalAlignment="Left"
                                  Text="{Binding SearchKeywordForCostCenter,
                                                 Mode=TwoWay}"
-                                 TextWrapping="Wrap">
+                                 TextWrapping="Wrap"
+                                 interactivity:WatermarkTextBehavior.Text="Search Keyword...">
+                            <!-- Alternative form
                             <si:Interaction.Behaviors>
-                                <interactivity:WatermarkTextBehavior Foreground="Red" Text="Keyword..." />
+                                <interactivity:WatermarkTextBehavior Foreground="Red" WatermarkText="Keyword..." />
                             </si:Interaction.Behaviors>
+                            -->
                         </TextBox>
                     </StackPanel>
                     <StackPanel Width="300"
