--- a/Julmar.Wpf.Helpers/test/C#/TestCompositionWithEmbeddedHash/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/C#/TestCompositionWithEmbeddedHash/MainWindow.xaml
@@ -1,8 +1,11 @@
 ﻿<Window x:Class="TestCompositionWithEmbeddedHash.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:julmar="http://www.julmar.com/wpfhelpers"
+        Title="MainWindow" Height="350" Width="525"
+        DataContext="{julmar:ViewModelCreator Key=Test}">
     <Grid>
-        <TextBlock x:Name="txt" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <TextBlock x:Name="txt" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   Text="{Binding Text}" />
     </Grid>
 </Window>
