Updates the use of Interactivity in the solution by replacing all references to System.Windows.Interactivity library with ones to the newer Microsoft.Xaml.Behaviors package

--- a/Julmar.Wpf.Helpers/test/DeferredScrollingTest/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/DeferredScrollingTest/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="DeferredScrollingTest.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:julmar="clr-namespace:JulMar.Windows.Interactivity;assembly=Julmar.Wpf.Behaviors"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" Title="Amazing Technicolor" Height="350" Width="525">
+        xmlns:julmar="http://www.julmar.com/wpfhelpers"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors" Title="Amazing Technicolor" Height="350" Width="525">
     
     <Window.Resources>
         <DataTemplate x:Key="ColorSwatchTemplate">
