--- a/Julmar.Wpf.Helpers/test/DragDropTest/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/DragDropTest/MainWindow.xaml
@@ -1,8 +1,10 @@
 ﻿<Window x:Class="ItemsControlDragDropBehavior.TestApp.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Interaction="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" xmlns:julmar="http://www.julmar.com/wpfhelpers"
-    xmlns:TestApp="clr-namespace:ItemsControlDragDropBehavior.TestApp" Title="Drag Drop Test">
+    xmlns:Interaction="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:julmar="http://www.julmar.com/wpfhelpers"
+    xmlns:TestApp="clr-namespace:ItemsControlDragDropBehavior.TestApp"
+    Title="Drag Drop Test">
     <Window.Resources>
         <DataTemplate x:Key="listBoxDataTemplate" DataType="TestApp:Product">
             <Border BorderBrush="Blue" CornerRadius="5"  BorderThickness="1" Padding="10" Margin="5" Background="White" TextElement.Foreground="Green">
@@ -73,12 +75,16 @@
         <Label Grid.Row="1" Grid.ColumnSpan="2" Margin="10,0"
                Content="Drop items into the below ListView - should only allow when Ctrl is held during drag." />
         
-        <ListView Margin="10,30,10,10" Grid.Row="1" Grid.ColumnSpan="2">
+        <ListView Margin="10,30,10,10" Grid.Row="1" Grid.ColumnSpan="2" >
             <Interaction:Interaction.Behaviors>
-                <julmar:ItemsControlDragDropBehavior DragTemplate="{StaticResource listViewItemTemplate}"
+                <julmar:ItemsControlDragDropBehavior DragTemplate="{StaticResource listViewItemTemplate}" AllowOnlySelf="False"
                                                      DropEnter="OnListViewDropEnter" />
+
                 <julmar:ListViewSortBehavior InitialColumnIndex="2" SortDirection="Descending" ArrowFill="Black" />
+                
             </Interaction:Interaction.Behaviors>
+            <Interaction:EventTrigger x:Name="DropEnter" Changed="OnListViewDropEnter"></Interaction:EventTrigger>
+
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
