--- a/Julmar.Wpf.Helpers/test/ListViewSortTest/Test/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/ListViewSortTest/Test/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:Custom="http://www.julmar.com/wpfhelpers"
+	xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:Custom="http://www.julmar.com/wpfhelpers"
 	x:Class="Test.MainWindow"
 	x:Name="Window"
 	Title="MainWindow"
