--- a/Julmar.Wpf.Helpers/test/MouseScrollingBehavior/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/MouseScrollingBehavior/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MouseScrollingBehavior.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:Interactivity="clr-namespace:JulMar.Windows.Interactivity;assembly=Julmar.Wpf.Behaviors"
         Title="MainWindow" Height="350" Width="525">
     
