--- a/Julmar.Wpf.Helpers/test/MultiSelectTreeView/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/MultiSelectTreeView/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MultiSelectTreeView.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:julmar="clr-namespace:JulMar.Windows.Interactivity;assembly=Julmar.Wpf.Behaviors" 
     Title="Multi-Select TreeView Test" Width="500" Height="300" Background="Cornsilk">
 
