--- a/Julmar.Wpf.Helpers/test/ScrollTest/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/ScrollTest/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:diag="clr-namespace:System.Diagnostics;assembly=System"
-        xmlns:int="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:int="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:julmar="http://www.julmar.com/wpfhelpers"
         Title="Synchronized Scroll Behavior Test" Height="350" Width="750" FontSize="16pt">
     <Grid>
