--- a/Julmar.Wpf.Helpers/test/TestMvvmApp/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/TestMvvmApp/MainWindow.xaml
@@ -2,8 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:julmar="http://www.julmar.com/wpfhelpers"
-    xmlns:Interactivity="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-    xmlns:ic="clr-namespace:Microsoft.Expression.Interactivity.Core;assembly=Microsoft.Expression.Interactions" 
+    xmlns:Interactivity="http://schemas.microsoft.com/xaml/behaviors" 
     x:Class="TestMvvm.MainWindow"
     Title="{Binding Title}" Height="300" Width="500"
     Background="{julmar:LinearGradientBrush LightGreen, SeaGreen, 65}"
@@ -153,10 +152,10 @@
             <TextBlock Text="Here is some text!" FontSize="36pt" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin=".5,.5" FontWeight="Bold" Opacity="0" >
             	<Interactivity:Interaction.Triggers>
             		<julmar:BindingTrigger Binding="{Binding ShowText}" Value="True">
-            			<ic:ChangePropertyAction PropertyName="Opacity" Duration="0:0:1" Value="1"/>
+            			<Interactivity:ChangePropertyAction PropertyName="Opacity" Duration="0:0:1" Value="1"/>
             		</julmar:BindingTrigger>
             		<julmar:BindingTrigger Binding="{Binding ShowText}" Value="False">
-            			<ic:ChangePropertyAction PropertyName="Opacity" Value="0" Duration="0:0:1"/>
+            			<Interactivity:ChangePropertyAction PropertyName="Opacity" Value="0" Duration="0:0:1"/>
             		</julmar:BindingTrigger>
             	</Interactivity:Interaction.Triggers>
             	<TextBlock.RenderTransform>
