--- a/Julmar.Wpf.Helpers/test/UndoRedoTest/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/UndoRedoTest/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WpfApplication1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:si="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:si="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:julmar="http://www.julmar.com/wpfhelpers"
         Title="MainWindow" Height="350" Width="525">
     
