--- a/Julmar.Wpf.Helpers/test/ViewModelTriggerTest/MainWindow.xaml
+++ b/Julmar.Wpf.Helpers/test/ViewModelTriggerTest/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
-        xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" 
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+        xmlns:ei="http://schemas.microsoft.com/xaml/behaviors" 
         xmlns:julmar="http://www.julmar.com/wpfhelpers"
         x:Class="ViewModelTriggerTest.MainWindow"
         Title="MainWindow" Height="350" Width="525">
